Arreglat bug overflow tarjetes oferta formativa

--- a/src/apps/coopolis/static/styles/sass/content/elements/_course-card.scss
+++ b/src/apps/coopolis/static/styles/sass/content/elements/_course-card.scss
@@ -48,11 +48,14 @@
   }
   &__text {
     max-height: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     
-    p {
+    &>* {
       overflow: hidden;
       text-overflow: ellipsis;
-      white-space:nowrap
+      white-space: nowrap;
     }
   }
   &__bloc {
